--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-    <!--<link href="assets/global/css/login.min.css" rel="stylesheet" type="text/css" />-->
-    <link id="ng_load_plugins_before1" />
+    <link id="ng_load_plugins_before" />
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
@@ -60,17 +59,26 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- END CORE JQUERY PLUGINS -->
     <!-- BEGIN CORE ANGULARJS PLUGINS -->
     <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
+
+
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+
     <script src="assets/global/plugins/angularjs/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/angular-touch.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/plugins/angular-ui-router.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/angular-route.js"></script>
+   
     <!-- END CORE ANGULARJS PLUGINS -->
     <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
     <script src="js/sakaryarehberi.js" type="text/javascript"></script>
     <script src="js/directives.js" type="text/javascript"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
     <!-- END APP LEVEL ANGULARJS SCRIPTS -->
     <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
 
