--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <script src="js/directives.js" type="text/javascript"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/constants.js"></script>
     <!-- END APP LEVEL ANGULARJS SCRIPTS -->
     <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
 
