--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME GLOBAL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
+    <link href="assets/global/plugins/angular-ui-select/select.min.css" rel="stylesheet" />
     <link href="assets/layouts/layout3/css/layout.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/layouts/layout3/css/themes/default.min.css" rel="stylesheet" type="text/css" id="style_color" />
     <link href="assets/layouts/layout3/css/custom.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
-
 
 </head>
 <body class="page-container-bg-solid page-boxed page-header-top-fixed">
@@ -58,15 +58,19 @@ License: You must have a valid license purchased only from themeforest(the above
     <script src="assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
     <!-- END CORE JQUERY PLUGINS -->
     <!-- BEGIN CORE ANGULARJS PLUGINS -->
+
+
     <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
-
-
+   
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 
+
     <script src="assets/global/plugins/angularjs/angular-sanitize.min.js" type="text/javascript"></script>
+
+    <script src="assets/global/plugins/angular-ui-select/select.min.js"></script>
     <script src="assets/global/plugins/angularjs/angular-touch.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/plugins/angular-ui-router.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
