--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <title>Metronic | Dashboard</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+  
     <meta content="" name="description" />
     <meta content="" name="author" />
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
@@ -37,9 +38,9 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME GLOBAL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
-    <link href="assets/global/plugins/angular-ui-select/select.min.css" rel="stylesheet" />
+    <link href="assets/global/plugins/angular-ui-select/select.css" rel="stylesheet" />
     <link href="assets/layouts/layout3/css/layout.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/layouts/layout3/css/themes/default.min.css" rel="stylesheet" type="text/css" id="style_color" />
+    <link href="assets/layouts/layout3/css/themes/blue-steel.min.css" rel="stylesheet" type="text/css" id="style_color" />
     <link href="assets/layouts/layout3/css/custom.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
@@ -76,14 +77,17 @@ License: You must have a valid license purchased only from themeforest(the above
     <script src="assets/global/plugins/angularjs/plugins/ocLazyLoad.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/angular-route.js"></script>
-   
+    <script src="assets/global/plugins/uri.js/uri.js"></script>
+    <script src="assets/global/plugins/angular-spinner/angular-spinner.min.js"></script>
     <!-- END CORE ANGULARJS PLUGINS -->
     <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
     <script src="js/sakaryarehberi.js" type="text/javascript"></script>
     <script src="js/directives.js" type="text/javascript"></script>
+    <script src="js/appSettings.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/constants.js"></script>
+    <script src="js/filters.js"></script>
     <!-- END APP LEVEL ANGULARJS SCRIPTS -->
     <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
 
