--- a/Web/index.html
+++ b/Web/index.html
@@ -48,6 +48,7 @@ License: You must have a valid license purchased only from themeforest(the above
 </head>
 <body class="page-container-bg-solid page-boxed page-header-top-fixed">
     <div ui-view></div>
+    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>
 
     <script src="assets/global/plugins/jquery.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -78,6 +79,8 @@ License: You must have a valid license purchased only from themeforest(the above
     <script src="assets/global/plugins/angularjs/plugins/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/angularjs/angular-route.js"></script>
     <script src="assets/global/plugins/uri.js/uri.js"></script>
+    <script src="assets/global/plugins/angular-md5/angular-md5.min.js"></script>
+    <script src="assets/global/plugins/angular-spinner/node_modules/spin.js/spin.min.js"></script>
     <script src="assets/global/plugins/angular-spinner/angular-spinner.min.js"></script>
     <!-- END CORE ANGULARJS PLUGINS -->
     <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
