--- a/Web/index.html
+++ b/Web/index.html
@@ -26,18 +26,18 @@
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
     <link href="assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/layouts/layout3/css/themes/yellow-crusta.min.css" rel="stylesheet" />
     <!-- END THEME GLOBAL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
     <link href="assets/global/css/search.min.css" rel="stylesheet" />
     <link href="assets/global/plugins/angular-ui-select/select.css" rel="stylesheet" />
     <link href="assets/layouts/layout3/css/layout.css" rel="stylesheet" type="text/css" />
-    <link href="assets/layouts/layout3/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color" />
-    <link href="assets/layouts/layout3/css/custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/layouts/layout3/css/custom.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
 
 </head>
-<body class="page-container-bg-solid page-boxed page-header-top-fixed">
+<body class="page-container-bg-solid">
     <div ui-view></div>
     <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>
 
@@ -51,10 +51,12 @@
     <script src="assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
     <!-- END CORE JQUERY PLUGINS -->
     <!-- BEGIN CORE ANGULARJS PLUGINS -->
-
+    <script src='//maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR'></script>
+    <script src="assets/global/plugins/lodash.min.js"></script>
 
     <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
 
+    <script src="assets/global/plugins/angular-google-maps.min.js"></script>
     <!-- Firebase -->
     <script src="assets/global/plugins/firebase/firebase.js"></script>
     <!-- AngularFire -->
@@ -72,6 +74,7 @@
     <script src="assets/global/plugins/angular-md5/angular-md5.min.js"></script>
     <script src="assets/global/plugins/angular-spinner/node_modules/spin.js/spin.min.js"></script>
     <script src="assets/global/plugins/angular-spinner/angular-spinner.min.js"></script>
+
     <!-- END CORE ANGULARJS PLUGINS -->
     <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
     <script src="js/sakaryarehberi.js" type="text/javascript"></script>
@@ -110,18 +113,18 @@
             <div class="portlet-body">
                 <div class="row">
                     <div class="col-md-6">
-                        <carousel interval="myInterval">
-                            <slide ng-repeat="slide in slides" active="slide.active">
+                        <uib-carousel interval="myInterval">
+                            <uib-slide ng-repeat="slide in slides" active="slide.active">
                                 <img ng-src="{{slide.image}}" style="margin:auto;height:305px; width:100%">
                                 <div class="carousel-caption">
                                     <p>{{slide.text}}</p>
                                 </div>
-                            </slide>
-                        </carousel>
+                            </uib-slide>
+                        </uib-carousel>
                     </div>
                     <div class="col-md-6">
                         <div class="tab-content">
-                            <div class="tab-pane selected=='info'?active:''">
+                            <div class="tab-pane active" ng-if="selected=='info'">
                                 <div class="scroller" style="height: 200px;">
                                     <p>
                                         {{location.Location_Info}}
@@ -129,42 +132,52 @@
 
                                 </div>
                             </div>
-                            <div class="tab-pane selected=='map'?active:''" id="portlet_tab2">
-                                <div class="scroller" style="height: 200px;">
-                                    <h4>Tab 2 Content</h4>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                                        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo.
-                                    </p>
-                                    <p>
-                                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-                                        luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-                                        erat volutpat.ut laoreet dolore magna ut laoreet dolore magna. ut laoreet dolore magna. ut laoreet dolore magna.
-                                    </p>
+                            <div class="tab-pane active" ng-if="selected=='map'" >
+                                <div>
+                                    <google-map control="map.control" center="map.center" zoom="map.zoom">
+                                        <marker coords="marker.center"></marker>
+                                    </google-map>
                                 </div>
+                               
+
+                                <button ng-click="getDirections()" class="btn btn-primary">Yol Tarifi </button>
                             </div>
-                            <div class="tab-pane" id="portlet_tab3">
+                            <div class="tab-pane active" ng-if="selected=='comment'">
                                 <div class="scroller" style="height: 200px;">
-                                    <h4>Tab 3 Content</h4>
-                                    <p>
-                                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-                                        luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam
-                                        erat volutpat.ut laoreet dolore magna ut laoreet dolore magna. ut laoreet dolore magna. ut laoreet dolore magna.
-                                    </p>
-                                    <p>
-                                        Ut wisi enim ad btn-smm veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-                                        molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla
-                                        facilisi.
-                                    </p>
+                                    <div class="general-item-list" ng-repeat="comment in location.UserComments">
+                                        <div class="item">
+                                            <div class="item-head">
+                                                <div class="item-details">
+                                                    <img class="item-pic rounded" ng-src="{{comment.User.User_ImgPath}}">
+                                                    <a href="" class="item-name primary-link">{{comment.User.User_Name}}</a>
+                                                    <span class="item-label">{{comment.UserComment_Date}}</span>
+                                                </div>
+                                            </div>
+                                            <div class="item-body">{{comment.UserComment_Comment}}  </div>
+                                        </div>
+
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row" ng-show="directions.showList">
+                    <div class="portlet light bordered">
+                        <div class="portlet-body">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div id="directionsList" ng-show="directions.showList" class="panel panel-primary"></div>
+
+                                </div>                             
+                            </div>
+
+
+                        </div>                  
+                    </div>
                 </div>
             </div>
-
         </div>
-
 
     </script>
 </body>
