--- a/Web/index.html
+++ b/Web/index.html
@@ -94,7 +94,7 @@
 
     <script type="text/ng-template" id="control.tpl.html" >
         <div class="btn-group" ng-controller="LocationDetailCtrl">
-            <label  class="btn btn-sm btn-default" style="margin-top:11px; margin-right:0; margin-left:5px">Yol Tarifi</label>
+            <label  class="btn btn-sm btn-default" style="margin-top:11px; margin-right:0; margin-left:5px">{{filterDisplayName}}</label>
             <button type="button" class="btn btn-sm btn-default dropdown-toggle"  style="margin-top:11px; margin-right:0;" data-toggle="dropdown" aria-expanded="true">
                 <i class="fa fa-angle-down"></i>
             </button>
