--- a/Web/index.html
+++ b/Web/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en" ng-app="sakaryarehberi">
+<html lang="tr" ng-app="sakaryarehberi">
 <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
@@ -39,7 +39,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
 
 </head>
-<body class="page-container-bg-solid">
+<body class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo page-container-bg-solid">
     <div ui-view></div>
     <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>
 
@@ -94,11 +94,11 @@
     <script src="js/api.js"></script>
     <!-- END APP LEVEL ANGULARJS SCRIPTS -->
     <!-- BEGIN APP LEVEL JQUERY SCRIPTS -->
-    
+
     <script src="assets/global/scripts/app.js" type="text/javascript"></script>
     <script src="assets/layouts/layout3/scripts/layout.js" type="text/javascript"></script>
 
-    <script type="text/ng-template" id="control.tpl.html" >
+    <script type="text/ng-template" id="control.tpl.html">
         <div class="btn-group" ng-controller="LocationDetailCtrl">
             <label class="btn btn-sm btn-default" style="margin-top:10px; margin-right:0; margin-left:5px;height:31px">{{filterDisplayName}}</label>
             <button type="button" class="btn btn-sm btn-default dropdown-toggle" style="margin-top:10px; margin-right:0;height:31px" data-toggle="dropdown" aria-expanded="true">
