--- a/Web/index.html
+++ b/Web/index.html
@@ -65,7 +65,7 @@
     <script src="assets/global/plugins/firebase/firebase.js"></script>
     <!-- AngularFire -->
     <script src="assets/global/plugins/angularfire/dist/angularfire.min.js"></script>
-
+    <script src="assets/global/plugins/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <script src="assets/global/plugins/angularjs/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/sweetalert/dist/sweetalert.min.js"></script>
     <script src="assets/global/plugins/angular-ui-select/select.min.js"></script>
