--- a/Web/index.html
+++ b/Web/index.html
@@ -22,7 +22,6 @@
     <link href="assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
     <link href="assets/pages/css/blog.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-
     <link id="ng_load_plugins_before" />
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN THEME GLOBAL STYLES -->
@@ -57,9 +56,9 @@
     <!-- BEGIN CORE ANGULARJS PLUGINS -->
 
 
-    <script src="//maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
+    <!--<script src="//maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>-->
 
-    
+
     <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/lodash.min.js"></script>
     <script src="assets/global/plugins/angular-simple-logger/dist/angular-simple-logger.js"></script>
