--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="tr-TR">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' localhost:*  *.firebaseio.com *.firebase.com">
-
+     <meta http-equiv="content-language" content="tr">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
