--- a/Web/index.html
+++ b/Web/index.html
@@ -56,7 +56,7 @@
     <!-- BEGIN CORE ANGULARJS PLUGINS -->
 
 
-    <!--<script src="//maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>-->
+    <script src="//maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
 
 
     <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
