--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
     <title></title>
     <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="lib/ionic-contrib-tinder-cards/ionic.tdcards.css" rel="stylesheet">
     <link href="lib/sweetalert/dist/sweetalert.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <script src="https://maps.google.com/maps/api/js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <!--<script src="https://www.youtube.com/iframe_api"></script>-->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="lib/underscore/underscore-min.js"></script>
