--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -8,7 +8,7 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="lib/sweetalert/dist/sweetalert.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
-    <script src="https://maps.google.com/maps/api/js"></script>
+    <script src="//maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
     <!--<script src="https://www.youtube.com/iframe_api"></script>-->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
