--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/directives.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/appSettings.js"></script>
     <script src="js/factories.js"></script>
     <script src="js/config.js"></script>
     <script src="js/api.js"></script>
