--- a/Web/index.html
+++ b/Web/index.html
@@ -56,14 +56,13 @@
     <!-- END CORE JQUERY PLUGINS -->
     <!-- BEGIN CORE ANGULARJS PLUGINS -->
 
-    <script src="//maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
 
 
     <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
     <script src="assets/global/plugins/lodash.min.js"></script>
     <script src="assets/global/plugins/angular-simple-logger/dist/angular-simple-logger.js"></script>
     <script src="assets/global/plugins/angular-google-maps/dist/angular-google-maps.js"></script>
-
     <!-- Firebase -->
     <script src="assets/global/plugins/firebase/firebase.js"></script>
     <!-- AngularFire -->
