--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -1,13 +1,14 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="utf-8">
+    <meta content="text/html; charset=utf8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta http-equiv="Content-Security-Policy" content="default-src *; script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
     <title></title>
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="lib/sweetalert/dist/sweetalert.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="lib/sweetalert/themes/twitter/twitter.css" rel="stylesheet" />
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
