--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -8,6 +8,7 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="lib/sweetalert/dist/sweetalert.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="lib/sweetalert/themes/twitter/twitter.css" rel="stylesheet" />
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
