--- a/Web/index.html
+++ b/Web/index.html
@@ -83,6 +83,7 @@
     <script src="assets/global/plugins/angular-moment/angular-moment.min.js"></script>
     <script src="assets/global/plugins/bootstrap-summernote/summernote.min.js"></script>
     <script src="assets/global/plugins/bootstrap-summernote/lang/summernote-tr-TR.js"></script>
+    <script src="assets/pages/scripts/ng-infinite-scroll.min.js"></script>
     <!-- END CORE ANGULARJS PLUGINS -->
     <!-- BEGIN APP LEVEL ANGULARJS SCRIPTS -->
     <script src="js/sakaryarehberi.js" type="text/javascript"></script>
