--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -15,6 +15,8 @@
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="lib/moment/min/moment.min.js"></script>
+    <script src="lib/angular-moment/node_modules/moment/locale/tr.js"></script>
+
     <script src="lib/angular-moment/angular-moment.min.js"></script>
     <script src="lib/angular-slugify/dist/angular-slugify.min.js"></script>
     <script src="lib/collide/collide.js"></script>
