--- a/Web/index.html
+++ b/Web/index.html
@@ -53,7 +53,7 @@
     <!-- END CORE JQUERY PLUGINS -->
     <!-- BEGIN CORE ANGULARJS PLUGINS -->
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?language=tr-TR&key=AIzaSyCeHrsgRhVTLVIpx_HwGNTsl6nO0HyXXoc" type="text/javascript"></script>
 
 
     <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
