--- a/Mobile/www/index.html
+++ b/Mobile/www/index.html
@@ -13,7 +13,7 @@
 
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="lib/angular-ui-select/select.min.css" rel="stylesheet" />
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=tr-TR" type="text/javascript"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?language=tr-TR&key=AIzaSyCeHrsgRhVTLVIpx_HwGNTsl6nO0HyXXoc" type="text/javascript"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/underscore/underscore-min.js"></script>
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
